--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,47 @@ iframe {
     text-transform: uppercase;
     margin-top: 34px;
     list-style: none;
+    overflow: hidden;
 }
 .main-nav li {
     margin-left: 25px;
 }
+
+
+.main-nav li.dropdown {
+    display: inline-block;
+}
+
 .main-nav a {
     color: #432;
 }
 .main-nav a:hover {
     color: #0bd;
 }
+
+
+.main-nav li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   
+}
+
+.dropdown-content a {
+    color: #432;
+    padding: 5px 10px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 1rem;
+}
+
 
 .page-header {
     display: flex;
@@ -53,6 +84,8 @@ iframe {
     margin: 0 auto;
     padding: 0 4%;
 }
+
+.show {display:block;}
 
 /* HOME
 ------------------------------- */
