--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ iframe {
 }
 
 .dropdown-content {
-    visibility:hidden;
+    display: none;
     position: absolute;
     
     min-width: 160px;
