--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,13 @@ iframe {
 }
 
 .dropdown-content {
+    
     display: none;
     position: absolute;
     
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    overflow: hidden;
    
 }
 
