--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ iframe {
     
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    overflow: hidden;
+    z-index:-100;
    
 }
 
